[package]
name = "astar"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.10.0"
fixed = "1.15.0"
fixed-sqrt = "0.2.5"
jemallocator = { version = "0.5.0", optional = true }
ordered-float = "3.0.0"
refpool = "0.4.3"
typed-arena = "2.0.1"

[profile.bench]
lto = "thin"
debug = false
overflow-checks = false
strip = true
incremental = false
codegen-units = 1

[profile.bench.build-override]
debug = false
overflow-checks = false
strip = true
incremental = false
codegen-units = 1

[profile.bench.package."*"]
debug = false
overflow-checks = false
strip = true
incremental = false
codegen-units = 1
